# wam-client

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: main.yml
include/: addon.h  database.h  dbconfig.h  httplib.h  login_dialog.h  mainwindow.h  response.h  settingsmanager.h  signup_dialog.h  ui_login_dialog.h  ui_mainwindow.h  ui_signup_dialog.h  ui_upload_addon_dialog.h  upload_addon_dialog.h  user.h  utils.h
src/: addon.cpp  database.cpp  jsoncpp.cpp  login_dialog.cpp  main.cpp  mainwindow.cpp  settingsmanager.cpp  signup_dialog.cpp  upload_addon_dialog.cpp  user.cpp  utils.cpp
ui/: login_dialog.ui  mainwindow.ui  signup_dialog.ui  upload_addon_dialog.ui
